@@ -88,6 +88,10 @@ following parameter in the discovery instructions XML:
 The module arranges the Ethernet interface statistics with
 such information as slot/port mapping and interface descriptions.
 
+=item * BetterNetworks EthernetBox
+
+The discovery module detects active sensors in an EthernetBox sensor module.
+
 =item * Cisco CatOS
 
 Memory, CPU, and temperature information. Per-interface statistics may be
