@@ -1,5 +1,8 @@
 2005-05-30  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
+	* perllib/Torrus/DevDiscover/BetterNetworks.pm:
+	new discovery module
+
 	* bin/collector.in: new command line option: --runalways
 
 2005-05-27  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
